--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img src="~/images/antique.jpg" />
+        </div>
+        <div class="col">
+            <div class="text-center">
+                <h1 class="display-4">Welkom</h1>
+                <p>Door op de knop te drukken kan u mijn mooie verzameling bekijken.</p>
+                <button class="btn">Bekijk mijn verzameling</button>
+            </div>
+        </div>
+    </div>
 </div>
+
