--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8" align="center" >
-            <img src="~/images/antique.jpg" class="img-fluid"  />
+            <img src="~/images/antique.jpg" class="img-fluid rounded"  />
         </div>
         <div class="col-md-4">
             <div class="text-center">
