--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Shared/_Layout.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Items" asp-action="Items">Overzicht items</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Info" asp-action="Info">Info</a>
+                        </li>
                     </ul>
                 </div>
             </div>
