--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/Items.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/Items.cshtml
@@ -3,5 +3,40 @@
     ViewData["Title"] = "Items";
 }
 
-<h1>Mijn verzameling</h1>
+
+
+
+
+
+
+<div class="row">
+    <div class="col-sm-3">
+        @if (this.User.Identity.IsAuthenticated)
+        {
+        <a class="btn testbtn " blur  href="#" role="button">Item toevoegen</a>
+        }     
+    </div>
+    <div class="col-sm-6">
+        <h1 class="text-center">Mijn verzameling</h1>
+    </div>
+    <div class="col-sm-3">
+
+        @if (this.User.Identity.IsAuthenticated)
+        {
+            <div class="input-group rounded">
+                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                       aria-describedby="search-addon" />
+                <i class="fas fa-search btn btn-danger "></i>
+            </div>
+        }
+    </div>
+</div>
+
+
+
+
+@if (this.User.Identity.IsAuthenticated)
+{
+    <p>Admin</p>
+}
 
