--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/Items.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/Items.cshtml
@@ -13,7 +13,7 @@
     <div class="col-sm-3">
         @if (this.User.Identity.IsAuthenticated)
         {
-        <a class="btn testbtn " blur  href="#" role="button">Item toevoegen</a>
+        <a class="btn testbtn"  href="#" role="button">Item toevoegen</a>
         }     
     </div>
     <div class="col-sm-6">
