--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
@@ -1,5 +1,31 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+<h1 class="text-center">Nieuw Merk aanmaken</h1>
+
+
+<div>
+    <div class="col-md-6 " >
+        <form>
+            
+            <div class="form-group">
+                <label class="control-label">Naam</label>
+                <input class="form-control" />
+                <span  class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Beschrijving</label>
+                <input  class="form-control" />
+                <span  class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label  class="control-label">Land</label>
+                <input  class="form-control" />
+                <span  class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input  value="Create" class="btn btn-primary" />
+            </div>
+        </form>
+
+    </div>
+
+</div>
