--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/Merk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/Merk.cshtml
@@ -2,4 +2,46 @@
     ViewData["Title"] = "Merken";
 }
 
-<p>Merken</p>
+<div class="row row-merken">
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-6 text-center">
+        <a class="btn testbtn " asp-action="CreateMerk" role="button">Merk toevoegen</a>
+    </div>
+    <div class="col-sm-3">
+    </div>
+</div>
+
+<table class="table row-merken ">
+    <thead>
+        <tr>
+            <th>
+                Naam
+            </th>
+            <th>
+                Land
+            </th>
+            <th>
+                Beschrijving
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+            <td>
+                <a class="a2" href="">Edit</a>
+                <a class="a2" href="">Details</a>
+                <a class="a2" href="">Delete</a>
+            </td>
+        </tr>
+
+    </tbody>
+</table>
+
+@*<a class="a2" asp-action="Edit" asp-route-id="">Edit</a>*@
