--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ShowRecoveryCodesModel
 @{
-    ViewData["Title"] = "Recovery codes";
+    ViewData["Title"] = "Herstelcodes";
     ViewData["ActivePage"] = "TwoFactorAuthentication";
 }
 
@@ -9,10 +9,10 @@
 <h4>@ViewData["Title"]</h4>
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>Sla deze codes op in een veilige plaats.</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        Als u uw toestel verliest en geen toegang hebt tot uw codes, dan verliest u uw toegang tot uw account.
     </p>
 </div>
 <div class="row">
