--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Error.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Error.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Fout";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Fout.</h1>
+<h2 class="text-danger">Er is een fout opgetreden tijdens het verwerken van uw request.</h2>
 
 @if (Model.ShowRequestId)
 {
