--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "Bevestig het veranderen van uw email";
 }
 
 <h1>@ViewData["Title"]</h1>
