--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Verwijder persoonlijke data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,7 +9,7 @@
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>Deze data verwijderen zal ervoor zorgen dat uw account verwijdert wordt, deze data en uw account kunnen dan niet meer hersteld worden.</strong>
     </p>
 </div>
 
@@ -24,7 +24,7 @@
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         }
-        <button class="btn btn-danger" type="submit">Delete data and close my account</button>
+        <button class="btn btn-danger" type="submit">Verwijder data en uw account</button>
     </form>
 </div>
 
