--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Beheer uw externe log ins";
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
 
@@ -22,7 +22,7 @@
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="Verwijder deze @login.ProviderDisplayName login van uw account">Verwijder</button>
                                 </div>
                             </form>
                         }
@@ -38,14 +38,14 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>Voeg een andere service toe om in te loggen.</h4>
     <hr />
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
             <p>
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in via uw @provider.DisplayName account">@provider.DisplayName</button>
                 }
             </p>
         </div>
