--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Persoonlijke data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,15 +9,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+        <p>Uw account bevat persoonlihke data dat u heeft opgegeven. Deze pagina staat toe om deze data op te downloaden of te verwijderen.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            <strong>Bij het verwijderen van uw data zal uw account permanent verwijderd worden, zonder de mogelijkheid om te herstellen.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
             <button class="btn btn-primary" type="submit">Download</button>
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Verwijder</a>
         </p>
     </div>
 </div>
