--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -10,11 +10,11 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+        <strong>Als u uw authenticator key reset, zal uw authenticator app niet werken totdat u het herconfigureerd heeft.</strong>
     </p>
     <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
+        Dit process schakelt two-factor authenticatie totdat u uw authenticator app bevestigt.
+        Als u uw authenticator app configuratie niet vervolledigt, kan u uw toegang verliezen tot uw account.
     </p>
 </div>
 <div>
