--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DownloadPersonalDataModel
 @{
-    ViewData["Title"] = "Download uw data;
+    ViewData["Title"] = "Download uw data";
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
