--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -2,8 +2,8 @@
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
-<ul class="nav nav-pills flex-column">
-    <li class="nav-item "><a class="accountsettingsNavItem  nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profiel</a></li>
+<ul class="nav nav-pills flex-column accountsettingsNavItem">
+    <li id="profile" class="nav-item profile "><a class="accountsettingsNavItem profile  nav-link @ManageNavPages.IndexNavClass(ViewContext)" asp-page="./Index">Profiel</a></li>
     <li class="nav-item "><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Wachtwoord</a></li>
     @if (hasExternalLogins)
