--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
@@ -6,7 +6,7 @@
 
 <div>
     <div class="col-md-6 " >
-        <form asp-action="Create"> 
+        <form asp-action="CreateMerk"> 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Naam" class="control-label">Naam</label>
@@ -24,8 +24,8 @@
                    <option>Selecteer een Land</option>
                </select>
             </div>
-            <div class="form-group">
-                <input  value="Create" class="btn btn-primary" />
+            <div class="form-group" id="">
+                <input type="submit" value="CreateMerk" class="btn btn-primary" />
             </div>
         </form>
 
