--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Error.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Areas/Identity/Pages/Error.cshtml
@@ -16,8 +16,8 @@
 
 <h3>Development Mode</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    Omschakelen naar <strong>Development</strong> environment zal een meer gedetaileerde uitleg weergeven over de opgetreden fout.
 </p>
 <p>
-    <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
+    <strong>Development environment kan beter niet geactiveerd zijn in deployed applications</strong>, omdat het mogelijk is dat gevoelige informatie van excepties naar de eindgebruiker getoond wordt. Voor locale debugging, kan development environment ingeschakeld worden door de <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable te zetten naar <strong>Development</strong>, en de applicatie te heropstarten.
 </p>
