--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
@@ -19,10 +19,12 @@
                 <span asp-validation-for="Beschrijving" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label  class="control-label">Land</label>
-               <select asp-items="Model.Landen"asp-for="LandID">
-                   <option>Selecteer een Land</option>
-               </select>
+                <label class="control-label">Land</label>
+                <select asp-items="Model.Landen" asp-for="LandID">
+                    <option>Selecteer een Land</option>
+                </select>
+                <br/>
+                <span asp-validation-for="LandID" class="text-danger"></span>
             </div>
             <div class="form-group" id="">
                 <input type="submit" value="CreateMerk" class="btn btn-primary" />
