--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/wwwroot/css/site.css
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/wwwroot/css/site.css
@@ -43,6 +43,12 @@ a:hover {
      color: white;
 }
 
+.kleurBlauw {
+    color: #fff;
+    background-color: #014F88;
+    border-color: #014F88;
+}
+
 .btn {
     color: #fff;
     background-color: #014F88;
@@ -70,7 +76,7 @@ a:hover {
 
 
 .row-merken{
-    margin-top: 4em;
+    margin-top: 3em;
 }
 
 
@@ -86,6 +92,7 @@ a:hover {
     background-color: #ffffff;
     border-color: #ffffff;
 }
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
