crud mede-eigenaar

--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div class="container">
-    <div class="row">
+    <div class="row row-marge">
         <div class="col-md-8" align="center" >
             <img src="~/images/antique.jpg" class="img-fluid rounded"  />
         </div>
