--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/ItemOverzicht.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Items/ItemOverzicht.cshtml
@@ -9,7 +9,7 @@
 
 
 
-<div class="row row-merken">
+<div class="row row-marge">
     <div class="col-sm-3">
         @if (this.User.Identity.IsAuthenticated)
         {
