--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/DetailMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/DetailMerk.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Project_Ceustermans_Robin.ViewModels.MerkDetailsViewModel
 @{ 
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Details merk";
 }
 
 
-    <div class="card row-merken">
+    <div class="card row-marge">
         <div class="card-header kleurBlauw" asp-for="Naam">
             @Model.Naam
         </div>
