--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/MedeEigenaar/EditMedeEigenaar.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/MedeEigenaar/EditMedeEigenaar.cshtml
@@ -1,5 +1,28 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Project_Ceustermans_Robin.ViewModels.EditMedeEigenaarViewModel
+
+
+<h1 class="text-center">Mede-eigenaar aanpassen</h1>
+
+
+<div>
+    <div class="col-md-6 ">
+        <form asp-action="EditMedeEigenaar">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Voornaam" class="control-label">Voornaam</label>
+                <input asp-for="Voornaam" class="form-control" />
+                <span asp-validation-for="Voornaam" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Familienaam" class="control-label">Familienaam</label>
+                <input asp-for="Familienaam" class="form-control" />
+                <span asp-validation-for="Familienaam" class="text-danger"></span>
+            </div>
+            <div class="form-group" id="">
+                <input type="submit" value="Pas mede-eigenaar aan" class="btn btn-primary" />
+            </div>
+        </form>
+
+    </div>
+
+</div>
