--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/CreateMerk.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Land</label>
-                <select asp-items="Model.Landen" asp-for="LandID">
-                    <option>Selecteer een Land</option>
+                <select required="required" asp-items="Model.Landen" asp-for="LandID">
+                    <option  value="">Selecteer een land</option>
                 </select>
                 <br/>
                 <span asp-validation-for="LandID" class="text-danger"></span>
