--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/EditMerk.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Merk/EditMerk.cshtml
@@ -19,8 +19,8 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Land</label>
-                <select asp-items="Model.Landen" asp-for="LandID">
-                    <option>Selecteer een Land</option>
+                <select required="required" asp-items="Model.Landen" asp-for="LandID">
+                    <option value="">Selecteer een Land</option>
                 </select>
                 <br />
                 <span asp-validation-for="LandID" class="text-danger"></span>
