--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Shared/_Layout.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Items" asp-action="ItemOverzicht">Overzicht items</a>
+                            <a class="nav-link" asp-area="" asp-controller="VerzamelObject" asp-action="VerzamelObjectOverzicht">Overzicht items</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Info" asp-action="Info">Info</a>
