--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/VerzamelObjectOverzicht.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/VerzamelObjectOverzicht.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model Project_Ceustermans_Robin.ViewModels.VerzamelObjectOverzichtViewModel
 @{
-    ViewData["Title"] = "Verzamelobjecten";
+    ViewData["Title"] = "Merken";
 }
 
 
@@ -28,10 +28,57 @@
 </div>
 
 
-
-
-@if (this.User.Identity.IsAuthenticated)
+@if (Model.Items.Count() > 0)
 {
-    <p>Admin</p>
+    <div class="row row-marge">
+        @foreach (var item in Model.Items)
+        {
+            <div class="col-lg-3 col-md-4 col-sm-12 style="width: 14rem;"">
+                <div class="card m-1">
+                    <img src="~/images/@item.Afbeelding" class="card-img-top text-center"  alt="..." >
+                    <div class="card-body">
+                        <h5 class="card-title">@item.Naam</h5>
+                        <hr/>
+                        <p class="card-text">@item.Beschrijving</p>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item list-group-item-action flex-column align-items-start">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Categorie</h5>
+                            </div>
+                            <p class="mb-1">@item.Categorie.Beschrijving</p>
+                        </li>
+                        <li class="list-group-item list-group-item-action flex-column align-items-start">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Merk</h5>
+                            </div>
+                            @if (item.MerkID != null)
+                            {
+                                <p class="mb-1">@item.Categorie.Beschrijving</p>
+                            }
+                            else
+                            {
+                                <p class="mb-1">Merk onbekend</p>
+                            }
+
+                        </li>
+                    </ul>
+                    <div class="card-body">
+                        <a href="#" class="card-link text-dark">Details</a>
+                        @if (User.IsInRole("admin"))
+                        {
+                            <a href="#" class="card-link text-danger">Delete</a>
+                        }
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
+else
+{
+    <h4 class="row-marge ">
+        Er zijn geen items aanwezig
+    </h4>
 }
 
