--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/EditVerzamelObject.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/EditVerzamelObject.cshtml
@@ -3,16 +3,22 @@
 <h1 class="text-center">Verzamelobject bewerken</h1>
 
 
-<form enctype="multipart/form-data">
+<form enctype="multipart/form-data" class="row-marge" asp-action="EditVerzamelObject">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-row justify-content-center">
+
         <div class="form-group col-md-8 text-center">
-            <label asp-for="Afbeelding" class="control-label"></label>
-            <div class="custom-file">
-                <input asp-for="Afbeelding" class="custom-file-input" id="customFile">
-                <label asp-for="Afbeelding" class="custom-file-label" for="customFile">Kies een afbeelding</label>
+            <span style="display: inline-block">
+                @if (Model.Afbeelding != null)
+                {
+                    <img src="~/images/@Model.Afbeelding" class="card-img-top text-center" style="width: 35%" alt="afbeelding object">
+                }
+            </span>       
+            <div class="custom-file row-marge">
+                <input asp-for="NieuweAfbeelding" class="custom-file-input" id="customFile">
+                <label asp-for="NieuweAfbeelding" class="custom-file-label" for="customFile">Kies een afbeelding</label>
             </div>
-            <span asp-validation-for="Afbeelding" class="text-danger"></span>
+            <span asp-validation-for="NieuweAfbeelding" class="text-danger"></span>
         </div>
     </div>
 
@@ -82,7 +88,7 @@
 
     <div class="row">
         <div class="col-md-4 text-center">
-            <a class="btn testbtn text-white" role="button">Item toevoegen</a>
+            <a class="btn testbtn text-white" role="button">Mede-Eigenaar toevoegen</a>
         </div>
         <div class="col-md-8">
             <table class="table">
@@ -105,7 +111,7 @@
                             <td>
                                 @if (User.IsInRole("admin"))
                                 {
-                                    <a class="a2" asp-action="DeleteMerk"
+                                    <a class="a2" asp-action="DeleteMedeEigenaar"
                                        onclick="return confirm('Weet je zeker dat je het wilt verwijderen' )">
                                         Verwijder
                                     </a>
