--- a/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/VerzamelObjectOverzicht.cshtml
+++ b/Project_Ceustermans_Robin/Project_Ceustermans_Robin/Views/VerzamelObject/VerzamelObjectOverzicht.cshtml
@@ -35,10 +35,17 @@
         {
             <div class="col-lg-3 col-md-4 col-sm-12 style="width: 14rem;"">
                 <div class="card m-1">
-                    <img src="~/images/@item.Afbeelding" class="card-img-top text-center"  alt="..." >
+                    @if (item.Afbeelding != null)
+                    {
+                        <img src="~/images/@item.Afbeelding" class="card-img-top text-center" alt="abeelding object">
+                    }
+                    else
+                    {
+                        <img src="~/images/logo.png" class="card-img-top text-center" alt="logo">
+                    }
                     <div class="card-body">
-                        <h5 class="card-title">@item.Naam</h5>
-                        <hr/>
+                        <h5 class="card-title text-center">@item.Naam</h5>
+                        <hr />
                         <p class="card-text">@item.Beschrijving</p>
                     </div>
                     <ul class="list-group list-group-flush">
@@ -63,11 +70,12 @@
 
                         </li>
                     </ul>
-                    <div class="card-body">
+                    <div class="card-body text-center">
                         <a href="#" class="card-link text-dark">Details</a>
                         @if (User.IsInRole("admin"))
                         {
-                            <a href="#" class="card-link text-danger">Delete</a>
+                            <a class="card-link text-dark" asp-action="EditVerzamelObject" asp-route-id="@item.ID">Bewerk</a>
+                            <a href="#" class="card-link text-danger">Verwijder</a>
                         }
                     </div>
                 </div>
